--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>Image Interaction</title>
-  <!-- Add necessary CSS -->
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <input type="file" id="imageInput" accept="image/*">
-  <div class="image-container">
-    <canvas id="imageCanvas"></canvas>
+  <div class="container">
+    <div class="left-column">
+      <input type="file" id="imageInput" accept="image/*">
+      <div class="image-container">
+        <canvas id="imageCanvas"></canvas>
+      </div>
+    </div>
+    <div class="right-column">
+      <input type="text" id="textInput" placeholder="Enter text for selected box">
+      <input type="file" id="loadInput" accept=".json">
+      <button id="saveButton">Save Boxes</button>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
